scaling fixes on mobile

--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,13 @@ li {
   font-weight: bold;
 }
 
+iframe {
+  width:100%;
+  max-width: 100%;
+  height: 80vh;
+  border: none;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #121212;
@@ -228,6 +235,15 @@ li {
   }
 
   .section {
-    max-width: 90%;
+    max-width: 100%;
+  }
+
+  iframe {
+    width: 90%;
+    max-width: 95%;
+    height: 95vh;
+    display: block;
+    margin: 0 auto;
+    border: none;
   }
 }
